# 0-co_agent-friend

./: .dockerignore  Dockerfile  LICENSE  README.md  TOOLS.md  action.yml  api_server.py  demo.ipynb  demo.py  demo_briefing.py  demo_live.py  demo_ollama.py  friend.example.yaml  glama.json  mcp_server.py  pyproject.toml  server.json
.github/: FUNDING.yml
agent_friend/: __init__.py  __main__.py  audit.py  cli.py  config.py  fix.py  friend.py  grade.py  leaderboard_data.py  mcp_server.py  optimize.py  toolkit.py  validate.py
examples/: README.md  api_agent.py  bitnet_quickstart.py  cached_api_agent.py  ceo_briefing.py  ceo_toolkit.py  custom_tools.py  data_analyst.py  git_commit_agent.py  notion_quality_dashboard.py  ollama_quickstart.py  research_assistant.py  task_manager.py  voice_briefing.py
tests/: test_adapters.py  test_alert_tool.py  test_audit_cli.py  test_audit_tool.py  test_batch_tool.py  test_bitnet_provider.py  test_cache_tool.py  test_chunker_tool.py  test_config.py  test_config_tool.py  test_crypto_tool.py  test_database_tool.py  test_datetime_tool.py  test_diff_tool.py  test_email_tool.py  test_env_tool.py  test_event_bus_tool.py  test_examples.py  test_fetch_tool.py  test_file_tool.py  test_fix.py  test_format_tool.py  test_friend.py  test_function_tool.py  test_git_tool.py  test_grade.py  test_graph_tool.py  test_html_tool.py  test_http_tool.py  test_json_tool.py  test_leaderboard_data.py  test_lock_tool.py  test_map_reduce_tool.py  test_metrics_tool.py  test_notify_tool.py  test_optimize.py  test_process_tool.py  test_providers.py  test_queue_tool.py  (+22 more)
(+69 files in other folders)
